--- a/src/teaeli/IngredientDetails.form
+++ b/src/teaeli/IngredientDetails.form
@@ -146,6 +146,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Aloe Vera C/cut "/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="itemNameTxtActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
